test/spec/address-offset-range.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/address-offset-range.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/address-offset-range.fail.wast:3:21: offset must be less than or equal to 0xffffffff
  (func $bad (drop (i32.load offset=4294967296 (i32.const 0))))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
;;; STDERR ;;)
